--- a/manifest.json
+++ b/manifest.json
@@ -3,18 +3,20 @@
   "name": "Sebastian",
   "description": "Blocks sites and shows memes - inspired by Sebastian the crab",
   "version": "1.0",
-  "permissions": ["storage", "activeTab", "scripting"],
-  "content_scripts": [
-    {
-      "matches": ["<all_urls>"],
-      "js": ["content.js"]
-    }
-  ],
-  "background": {
-    "service_worker": "background.js"
-  },
   "action": {
     "default_popup": "popup.html"
   },
-  "host_permissions": ["<all_urls>"]
+  "background": {
+    "service_worker": "background.js"
+  },
+  "permissions": [
+    "activeTab",
+    "storage",
+    "scripting",
+    "tabs"
+  ],
+  "host_permissions": [
+    "<all_urls>"
+  ]
 }
+
